
1.6.7

Updated to NET 7.0 - DONE!!!

Wildcraft Trees compatibility finally added - DONE!!!
Dehydrated fruit- D!
Dried fruit - D!
Candied fruit - D!
Gelatin - D!
Candy - D!
Gozinaki - D!
Fruit bread - D!
Muffin - D!
Pemmican - D!
Stuffed pepper - D!
Trail mix - D!
Fruit syrup - D!
Peanut liquid stuff - D!
Strong / Potent wine & spirit - D!
Yeast water - D!
Yogurt
Meals
Barrel recipes - D!


Saps? Gum? Spile things?

Wildcraft compatibility updated
Salt works in meals again - DONE!!!
Non-chopped meat works in porridge
New gelatin textures - DONE!!!
Chopped food can be used for broth
Lard harden time reduced to 1/4th previous values; corrected harden transition numbers - DONE!!!
Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^) - DONE!!!
Wildcraft nutrition in pemmican corrected - DONE!!!

CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....


1.6.6

Clarified broth added
Egg yolk can be used in stews & soup
Sausage can be used in soup
Meat can be added to porridge (including sausage)
Saltmaking process revamped (check Cooking 101 for details)
Broth nutrition values fixed in bread, fruit bread, dumplings, muffins, and soft bread
Part-baked balls/mushroom/vegetable/stuffed pepper handbook crashing fixed
Handbook no longer says you can put syrups & toppings on regular bread
Trail mix handbook entry moved to Cooking 102
Cooking 101 & 102 alphabetized
Salted peanut candy requires correct amount of peanut paste
Boiled and pickled eggs re-added (not sure what happened there)
Funeral bell & pink bonnet mushrooms given proper health values (watch out)

1.6.5
Dehydrated fruits cure into the same amount of dried fruits (for real this time)
Handbook mentions that 1 L of broth is needed for meals
Handbook mentions acorn coffee recipe in Cooking 104
Non-vanilla fruit works in barrels
Vinegar barrel recipe re-added, you can turn berries into vinegar
Soft dough + 1 chopped pumpkin makes muffins, not dumplings