@@ -543,12 +543,16 @@
   "recipeingredient-item-fishnugget-raw-insturmentalcase": "fish nuggets",
   "game:meal-ingredient-stew-primary-fishnugget-raw": "fish nugget",
   "game:meal-ingredient-stew-secondary-fishnugget-raw": "fish nugget",
+  "game:meal-ingredient-soup-primary-fishnugget-raw": "fish nugget",
+  "game:meal-ingredient-soup-secondary-fishnugget-raw": "fish nugget",
   "game:recipeingredient-item-fishnugget-smashed": "tender fish fillet",
   "game:recipeingredient-item-fishnugget-smashed-insturmentalcase": "tender fish fillet",
   "recipeingredient-item-fishnugget-smashed": "tender fish fillet",
   "recipeingredient-item-fishnugget-smashed-insturmentalcase": "tender fish fillet",
   "game:meal-ingredient-stew-primary-fishnugget-smashed": "tender fish fillet",
   "game:meal-ingredient-stew-secondary-fishnugget-smashed": "tender fish fillet",
+  "game:meal-ingredient-soup-primary-fishnugget-smashed": "tender fish fillet",
+  "game:meal-ingredient-soup-secondary-fishnugget-smashed": "tender fish fillet",
 
   "game:recipeingredient-item-fishsauce": "fish sauce",
   "game:recipeingredient-item-fishsauce-insturmentalcase": "fish sauce",
@@ -5857,6 +5861,26 @@
   "game:recipeingredient-item-fruit-raspberry-insturmentalcase": "raspberries",
   "recipeingredient-item-fruit-raspberry": "raspberries",
   "recipeingredient-item-fruit-raspberry-insturmentalcase": "raspberries",
+  "game:recipeingredient-item-fruit-blueraspberry": "blue raspberries",
+  "game:recipeingredient-item-fruit-blueraspberry-insturmentalcase": "blue raspberries",
+  "recipeingredient-item-fruit-blueraspberry": "blue raspberries",
+  "recipeingredient-item-fruit-blueraspberry-insturmentalcase": "blue raspberries",
+  "game:recipeingredient-item-fruit-bunchberry": "bunchberries",
+  "game:recipeingredient-item-fruit-bunchberry-insturmentalcase": "bunchberries",
+  "recipeingredient-item-fruit-bunchberry": "bunchberries",
+  "recipeingredient-item-fruit-bunchberry-insturmentalcase": "bunchberries",
+  "game:recipeingredient-item-fruit-crowberry": "crowberries",
+  "game:recipeingredient-item-fruit-crowberry-insturmentalcase": "crowberries",
+  "recipeingredient-item-fruit-crowberry": "crowberries",
+  "recipeingredient-item-fruit-crowberry-insturmentalcase": "crowberries",
+  "game:recipeingredient-item-fruit-husktomato": "husk tomatoes",
+  "game:recipeingredient-item-fruit-husktomato-insturmentalcase": "husk tomatoes",
+  "recipeingredient-item-fruit-husktomato": "husk tomatoes",
+  "recipeingredient-item-fruit-husktomato-insturmentalcase": "husk tomatoes",
+  "game:recipeingredient-item-fruit-wolfberry": "wolfberries",
+  "game:recipeingredient-item-fruit-wolfberry-insturmentalcase": "wolfberries",
+  "recipeingredient-item-fruit-wolfberry": "wolfberries",
+  "recipeingredient-item-fruit-wolfberry-insturmentalcase": "wolfberries",
 
   "item-wilddryfruit-huckleberry": "Dried huckleberry",
   "item-wilddryfruit-snowberry": "Dried snowberry",
@@ -10107,8 +10131,36 @@
   "recipeingredient-item-wildpotentwineportion-bunchberry-insturmentalcase": "fine bunchberry wine",
   "recipeingredient-item-wildpotentwineportion-crowberry-insturmentalcase": "fine crowberry wine",
   "recipeingredient-item-wildpotentwineportion-husktomato-insturmentalcase": "fine husk tomato wine",
-  "recipeingredient-item-wildpotentwineportion-wolfberry-insturmentalcase": "fine wolfberry wine"
+  "recipeingredient-item-wildpotentwineportion-wolfberry-insturmentalcase": "fine wolfberry wine",
 
+  "item-yogurt-blueraspberry": "Blue raspberry yogurt portion",
+  "incontainer-item-yogurt-blueraspberry": "Blue raspberry yogurt",
+  "game:incontainer-item-yogurt-blueraspberry": "Blue raspberry yogurt",
+  "game:recipeingredient-item-yogurt-blueraspberry": "blue raspberry yogurt",
+  "expandedfoods:recipeingredient-item-yogurt-blueraspberry-insturmentalcase": "blue raspberry yogurt",
 
+  "item-yogurt-bunchberry": "Bunchberry yogurt portion",
+  "incontainer-item-yogurt-bunchberry": "Bunchberry yogurt",
+  "game:incontainer-item-yogurt-bunchberry": "Bunchberry yogurt",
+  "game:recipeingredient-item-yogurt-bunchberry": "bunchberry yogurt",
+  "expandedfoods:recipeingredient-item-yogurt-bunchberry-insturmentalcase": "bunchberry yogurt",
+
+  "item-yogurt-crowberry": "Crowberry yogurt portion",
+  "incontainer-item-yogurt-crowberry": "Crowberry yogurt",
+  "game:incontainer-item-yogurt-crowberry": "Crowberry yogurt",
+  "game:recipeingredient-item-yogurt-crowberry": "crowberry yogurt",
+  "expandedfoods:recipeingredient-item-yogurt-crowberry-insturmentalcase": "crowberry yogurt",
+
+  "item-yogurt-husktomato": "Husk tomato yogurt portion",
+  "incontainer-item-yogurt-husktomato": "Husk tomato yogurt",
+  "game:incontainer-item-yogurt-husktomato": "Husk tomato yogurt",
+  "game:recipeingredient-item-yogurt-husktomato": "husk tomato yogurt",
+  "expandedfoods:recipeingredient-item-yogurt-husktomato-insturmentalcase": "husk tomato yogurt",
+
+  "item-yogurt-wolfberry": "Wolfberry yogurt portion",
+  "incontainer-item-yogurt-wolfberry": "Wolfberry yogurt",
+  "game:incontainer-item-yogurt-wolfberry": "Wolfberry yogurt",
+  "game:recipeingredient-item-yogurt-wolfberry": "wolfberry yogurt",
+  "expandedfoods:recipeingredient-item-yogurt-wolfberry-insturmentalcase": "wolfberry yogurt"
 
 }   
