@@ -2,7 +2,7 @@
   {
     "op": "addeach",
     "path": "/ingredients/0/validStacks/-",
-    "value": [{ type: "item", code: "expandedfoods:yogurt-huckleberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurthuckleberry"]  }, { type: "item", code: "expandedfoods:yogurt-brambleberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtbrambleberry"]  }, { type: "item", code: "expandedfoods:yogurt-dogrose",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtdogrose"]  }, { type: "item", code: "expandedfoods:yogurt-gooseberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtgooseberry"]  }, { type: "item", code: "expandedfoods:yogurt-honeysuckle",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurthoneysuckle"]  }, { type: "item", code: "expandedfoods:yogurt-snowberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtsnowberry"]  }, { type: "item", code: "expandedfoods:yogurt-elderberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtelderberry"]  }, { type: "item", code: "expandedfoods:yogurt-strawberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtstrawberry"]  }, { type: "item", code: "expandedfoods:yogurt-cloudberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtcloudberry"]  }, { type: "item", code: "expandedfoods:yogurt-raspberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtraspberry"]  },],
+    "value": [{ type: "item", code: "expandedfoods:yogurt-huckleberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurthuckleberry"]  }, { type: "item", code: "expandedfoods:yogurt-brambleberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtbrambleberry"]  }, { type: "item", code: "expandedfoods:yogurt-dogrose",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtdogrose"]  }, { type: "item", code: "expandedfoods:yogurt-gooseberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtgooseberry"]  }, { type: "item", code: "expandedfoods:yogurt-honeysuckle",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurthoneysuckle"]  }, { type: "item", code: "expandedfoods:yogurt-snowberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtsnowberry"]  }, { type: "item", code: "expandedfoods:yogurt-elderberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtelderberry"]  }, { type: "item", code: "expandedfoods:yogurt-strawberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtstrawberry"]  }, { type: "item", code: "expandedfoods:yogurt-cloudberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtcloudberry"]  }, { type: "item", code: "expandedfoods:yogurt-raspberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtraspberry"]  }, { type: "item", code: "expandedfoods:yogurt-blueraspberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtblueraspberry"]  }, { type: "item", code: "expandedfoods:yogurt-bunchberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtbunchberry"]  }, { type: "item", code: "expandedfoods:yogurt-crowberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtcrowberry"]  }, { type: "item", code: "expandedfoods:yogurt-husktomato",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurthusktomato"]  }, { type: "item", code: "expandedfoods:yogurt-wolfberry",  shapeElement: "bowl/yogurt/*", textureMapping: ["liquid", "yogurtwolfberry"]  },],
     "file": "recipes/mixing/yogurtmeal.json",
     "side": "server",
     dependsOn: [{ "modid": "wildcraft" }]
