@@ -4,7 +4,7 @@
     "side": "server",
     op: "add", 
     path: "/skipVariants",
-    value: [ "yogurt-huckleberry", "yogurt-snowberry", "yogurt-brambleberry", "yogurt-honeysuckle", "yogurt-cloudberry", "yogurt-dogrose", "yogurt-elderberry", "yogurt-gooseberry", "yogurt-strawberry", "yogurt-raspberry", "yogurt-blueraspberry", "yogurt-bunchberry", "yogurt-crowberry", "yogurt-husktomato", "yogurt-wolfberry",  ],
+    value: [ "yogurt-huckleberry", "yogurt-snowberry", "yogurt-brambleberry", "yogurt-honeysuckle", "yogurt-cloudberry", "yogurt-dogrose", "yogurt-elderberry", "yogurt-gooseberry", "yogurt-strawberry", "yogurt-raspberry", "yogurt-blueraspberry", "yogurt-bunchberry", "yogurt-crowberry", "yogurt-husktomato", "yogurt-wolfberry" ],
     dependsOn: [{ "modid": "wildcraft", "invert": true }]
  },
  {
