@@ -55,7 +55,7 @@ Peanut liquid stuff - D!
 Strong / Potent wine & spirit - D!
 Yeast water - D!
 Yogurt
-Meals
+Meals - D!
 Barrel recipes - D!
 
 
@@ -69,6 +69,7 @@ Chopped food can be used for broth
 Lard harden time reduced to 1/4th previous values; corrected harden transition numbers - DONE!!!
 Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^) - DONE!!!
 Wildcraft nutrition in pemmican corrected - DONE!!!
+Fish nugget soup text fixed - DONE!!!
 
 CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 
